WIP: rec fun -> iterative => speedup, flatten calcLongestPaths

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ project(Hybrid_Evo_Algorithm)
 set(CMAKE_CXX_STANDARD 17)
 
 #profiler settings
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
+#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
 
 add_executable(test test.cpp jssp.cpp jssp.h ts.cpp ts.h mem.cpp mem.h)
 
