--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,27 +3,22 @@ project(Hybrid_Evo_Algorithm)
 
 set(CMAKE_CXX_STANDARD 17)
 
-#profiler settings
-#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0")
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
+if (MSVC)
+    set(CMAKE_CXX_FLAGS_RELEASE "/O2")
+else()
+    set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+endif()
 
-add_executable(test examples.cpp jssp.cpp jssp.h ts.cpp ts.h mem.cpp mem.h tabu_list.h)
+add_subdirectory(src)
+add_executable(example examples.cpp)
 
-target_link_libraries(test PRIVATE)
+target_link_libraries(example PRIVATE jssp tabu memetic)
 
 #               ^^^^^^^^^ Standalone ^^^^^^^^^
 # -------------------------------------------------------
-#               vvvvvvvvv  PyBind11  vvvvvvvvv
+#               vvvvvvvvv  PyBind11  vvvvvvvvv (uncomment below if you want to build a python interface with pybind11)
 
-#cmake_minimum_required(VERSION 3.5)
-#project(Hybrid_Evo_Algorithm)
+# add_subdirectory(pybind11)
+# pybind11_add_module(python_interface pybind_main.cpp)
 
-#set(CMAKE_BUILD_TYPE Release)
-#set(CMAKE_CXX_FLAGS "-Wall -Wextra")
-#set(CMAKE_CXX_FLAGS_RELEASE "-O3")
-#set(PYTHON_EXECUTABLE /home/laurenz/anaconda3/envs/jssp/bin/python)
-
-add_subdirectory(pybind11)
-pybind11_add_module(metaheuristic main.cpp jssp.cpp jssp.h ts.cpp ts.h mem.cpp mem.h)
-
-target_compile_definitions(metaheuristic PRIVATE)
+# target_compile_definitions(python_interface PRIVATE jssp tabu memetic)
