--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_library(jssp jssp.cpp jssp.h)
 add_library(tabu ts.cpp ts.h tabu_list.h)
 add_library(memetic mem.cpp mem.h)
+add_library(heuristic heuristics.cpp heuristics.h)
